manifests/voting-app/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting
spec:
  replicas: 16
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote:latest
          ports:
            - containerPort: 80
