manifests/voting-app/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: dockersamples/examplevotingapp_result:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
