manifests/voting-app/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
